--- a/Bid Matching.ipynb
+++ b/Bid Matching.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "id": "0b8967c4",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "id": "f33dacb9",
    "metadata": {},
    "outputs": [
@@ -391,7 +391,7 @@
        "[11 rows x 24 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "id": "f506e048",
    "metadata": {},
    "outputs": [
@@ -464,7 +464,7 @@
        "      <td>7%</td>\n",
        "      <td>5.00%</td>\n",
        "      <td>2</td>\n",
-       "      <td>0.07</td>\n",
+       "      <td>0.0675</td>\n",
        "      <td>0.07</td>\n",
        "      <td>0.0</td>\n",
        "      <td>$1,000,000</td>\n",
@@ -488,7 +488,7 @@
        "      <td>5%</td>\n",
        "      <td>5.00%</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.00</td>\n",
+       "      <td>0.0000</td>\n",
        "      <td>0.05</td>\n",
        "      <td>0.0</td>\n",
        "      <td>$1,000,000</td>\n",
@@ -512,7 +512,7 @@
        "      <td>7%</td>\n",
        "      <td>7.00%</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.07</td>\n",
+       "      <td>0.0675</td>\n",
        "      <td>0.07</td>\n",
        "      <td>0.0</td>\n",
        "      <td>$1,000,000</td>\n",
@@ -536,7 +536,7 @@
        "      <td>12%</td>\n",
        "      <td>12.00%</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.00</td>\n",
+       "      <td>0.0000</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.0</td>\n",
        "      <td>$1,000,000</td>\n",
@@ -560,7 +560,7 @@
        "      <td>7%</td>\n",
        "      <td>7.00%</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.07</td>\n",
+       "      <td>0.0675</td>\n",
        "      <td>0.07</td>\n",
        "      <td>0.0</td>\n",
        "      <td>$1,000,000</td>\n",
@@ -584,7 +584,7 @@
        "      <td>11%</td>\n",
        "      <td>11.00%</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.00</td>\n",
+       "      <td>0.0000</td>\n",
        "      <td>0.11</td>\n",
        "      <td>0.0</td>\n",
        "      <td>$1,000,000</td>\n",
@@ -608,7 +608,7 @@
        "      <td>8%</td>\n",
        "      <td>8.00%</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.08</td>\n",
+       "      <td>0.0800</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.0</td>\n",
        "      <td>$1,000,000</td>\n",
@@ -632,7 +632,7 @@
        "      <td>9%</td>\n",
        "      <td>9.00%</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.09</td>\n",
+       "      <td>0.0900</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.0</td>\n",
        "      <td>$1,000,000</td>\n",
@@ -656,7 +656,7 @@
        "      <td>9%</td>\n",
        "      <td>9.00%</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.09</td>\n",
+       "      <td>0.0900</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.0</td>\n",
        "      <td>$1,000,000</td>\n",
@@ -680,7 +680,7 @@
        "      <td>11%</td>\n",
        "      <td>11.00%</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.00</td>\n",
+       "      <td>0.0000</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.0</td>\n",
        "      <td>$1,000,000</td>\n",
@@ -704,7 +704,7 @@
        "      <td>8%</td>\n",
        "      <td>8.00%</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.08</td>\n",
+       "      <td>0.0800</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.0</td>\n",
        "      <td>$1,000,000</td>\n",
@@ -742,17 +742,17 @@
        "10  Client 11                               8%       8.00%             0   \n",
        "\n",
        "    Team 1 Bid  Team 2 Bid  Team 3 Bid Amount ($'s)  Default   E/A  ...  \\\n",
-       "0         0.07        0.07         0.0  $1,000,000         0  0.62  ...   \n",
-       "1         0.00        0.05         0.0  $1,000,000         0  0.64  ...   \n",
-       "2         0.07        0.07         0.0  $1,000,000         0  0.64  ...   \n",
-       "3         0.00        0.00         0.0  $1,000,000         0  0.16  ...   \n",
-       "4         0.07        0.07         0.0  $1,000,000         0  0.61  ...   \n",
-       "5         0.00        0.11         0.0  $1,000,000         0  0.68  ...   \n",
-       "6         0.08        0.00         0.0  $1,000,000         0  0.68  ...   \n",
-       "7         0.09        0.00         0.0  $1,000,000         0  0.51  ...   \n",
-       "8         0.09        0.00         0.0  $1,000,000         0  0.51  ...   \n",
-       "9         0.00        0.00         0.0  $1,000,000         0  0.23  ...   \n",
-       "10        0.08        0.00         0.0  $1,000,000         0  0.58  ...   \n",
+       "0       0.0675        0.07         0.0  $1,000,000         0  0.62  ...   \n",
+       "1       0.0000        0.05         0.0  $1,000,000         0  0.64  ...   \n",
+       "2       0.0675        0.07         0.0  $1,000,000         0  0.64  ...   \n",
+       "3       0.0000        0.00         0.0  $1,000,000         0  0.16  ...   \n",
+       "4       0.0675        0.07         0.0  $1,000,000         0  0.61  ...   \n",
+       "5       0.0000        0.11         0.0  $1,000,000         0  0.68  ...   \n",
+       "6       0.0800        0.00         0.0  $1,000,000         0  0.68  ...   \n",
+       "7       0.0900        0.00         0.0  $1,000,000         0  0.51  ...   \n",
+       "8       0.0900        0.00         0.0  $1,000,000         0  0.51  ...   \n",
+       "9       0.0000        0.00         0.0  $1,000,000         0  0.23  ...   \n",
+       "10      0.0800        0.00         0.0  $1,000,000         0  0.58  ...   \n",
        "\n",
        "       Size    QR    CR  Unnamed: 17  Unnamed: 18  Unnamed: 19  \\\n",
        "0   1040.22  2.03  2.51       10.25%        0.00%          NaN   \n",
@@ -783,7 +783,7 @@
        "[11 rows x 24 columns]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -797,11 +797,15 @@
     "for index, row in df.iterrows():\n",
     "    if row[\"Team 1 Bid\"] != 0:\n",
     "        if row[\"Team 2 Bid\"] > row[\"Team 3 Bid\"]:\n",
-    "            if row[\"Team 1 Bid\"] >= row[\"Team 3 Bid\"] and row[\"Team 3 Bid\"] > 0.03:\n",
+    "            if row[\"Team 1 Bid\"] > row[\"Team 3 Bid\"] and row[\"Team 3 Bid\"] > 0.03:\n",
     "                df.at[index, \"Team 1 Bid\"] = row[\"Team 3 Bid\"] - 0.0025\n",
-    "        elif row[\"Team 2 Bid\"] <= row[\"Team 3 Bid\"]:\n",
-    "            if row[\"Team 1 Bid\"] >= row[\"Team 2 Bid\"] and row[\"Team 2 Bid\"] > 0.03:\n",
+    "            elif row[\"Team 1 Bid\"] == row[\"Team 2 Bid\"]:\n",
     "                df.at[index, \"Team 1 Bid\"] = row[\"Team 2 Bid\"] - 0.0025\n",
+    "        elif row[\"Team 2 Bid\"] <= row[\"Team 3 Bid\"]:\n",
+    "            if row[\"Team 1 Bid\"] > row[\"Team 2 Bid\"] and row[\"Team 2 Bid\"] > 0.03:\n",
+    "                df.at[index, \"Team 1 Bid\"] = row[\"Team 2 Bid\"] - 0.0025\n",
+    "            elif row[\"Team 1 Bid\"] == row[\"Team 3 Bid\"]:\n",
+    "                df.at[index, \"Team 1 Bid\"] = row[\"Team 3 Bid\"] - 0.0025\n",
     "        \n",
     "\n",
     "df.head(11)\n",
@@ -810,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "id": "94c95c7b",
    "metadata": {},
    "outputs": [],
@@ -821,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "id": "5c767646",
    "metadata": {},
    "outputs": [
@@ -876,7 +880,7 @@
        "      <td>7%</td>\n",
        "      <td>5.00%</td>\n",
        "      <td>2</td>\n",
-       "      <td>0.0700</td>\n",
+       "      <td>0.0675</td>\n",
        "      <td>0.07</td>\n",
        "      <td>0.00</td>\n",
        "      <td>$1,000,000</td>\n",
@@ -924,7 +928,7 @@
        "      <td>7%</td>\n",
        "      <td>7.00%</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.0700</td>\n",
+       "      <td>0.0675</td>\n",
        "      <td>0.07</td>\n",
        "      <td>0.00</td>\n",
        "      <td>$1,000,000</td>\n",
@@ -972,7 +976,7 @@
        "      <td>7%</td>\n",
        "      <td>7.00%</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.0700</td>\n",
+       "      <td>0.0675</td>\n",
        "      <td>0.07</td>\n",
        "      <td>0.00</td>\n",
        "      <td>$1,000,000</td>\n",
@@ -1154,11 +1158,11 @@
        "499  Client 500                              12%      12.00%             0   \n",
        "\n",
        "     Team 1 Bid  Team 2 Bid  Team 3 Bid Amount ($'s)  Default   E/A  ...  \\\n",
-       "0        0.0700        0.07        0.00  $1,000,000         0  0.62  ...   \n",
+       "0        0.0675        0.07        0.00  $1,000,000         0  0.62  ...   \n",
        "1           NaN        0.05        0.00  $1,000,000         0  0.64  ...   \n",
-       "2        0.0700        0.07        0.00  $1,000,000         0  0.64  ...   \n",
+       "2        0.0675        0.07        0.00  $1,000,000         0  0.64  ...   \n",
        "3           NaN        0.00        0.00  $1,000,000         0  0.16  ...   \n",
-       "4        0.0700        0.07        0.00  $1,000,000         0  0.61  ...   \n",
+       "4        0.0675        0.07        0.00  $1,000,000         0  0.61  ...   \n",
        "..          ...         ...         ...          ...      ...   ...  ...   \n",
        "495         NaN        0.00        0.00  $1,000,000         0  0.31  ...   \n",
        "496         NaN        0.05        0.05  $1,000,000         0  0.72  ...   \n",
@@ -1195,7 +1199,7 @@
        "[500 rows x 24 columns]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1206,7 +1210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 9,
    "id": "e8af4c29",
    "metadata": {},
    "outputs": [],
