--- a/AAE 625 HW 5.ipynb
+++ b/AAE 625 HW 5.ipynb
@@ -741,6 +741,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b3924822",
+   "metadata": {},
+   "source": [
+    "### This part predicts the probability of default the loan. The range is between 0 and 1."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 56,
    "id": "d86a951a",
@@ -962,6 +970,14 @@
     "risk2 = df2[df2[\"Default\"] == 1]\n",
     "risk2[risk2[\"predicted_prob\"] > 0.05].describe()\n",
     "# risk2.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4df6c7b7",
+   "metadata": {},
+   "source": [
+    "### This part finds which clients we are confident about"
    ]
   },
   {
@@ -1252,6 +1268,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ea277ac0",
+   "metadata": {},
+   "source": [
+    "### Find the maximum willingness to pay of ideal clients"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 59,
    "id": "0ca71d4b",
@@ -1301,6 +1325,14 @@
     "df2[df2[\"Bidding Offer\"].isnull()].count()\n",
     "# count how many rows have \"Bidding Offer\" is not empty and not 0\n",
     "df2[df2[\"Bidding Offer\"].notnull() & (df2[\"Bidding Offer\"] != 0)].count()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c582f11",
+   "metadata": {},
+   "source": [
+    "### Filter the first 25 clients who we don't need additional loans. The rest of the clients are the ones we need to borrow loans from other banks before we give them loans."
    ]
   },
   {
@@ -1570,6 +1602,14 @@
     "# sort by \"predicted_prob\" in ascending order\n",
     "df3 = df3.sort_values(by=\"predicted_prob\", ascending=True)\n",
     "df3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f669d112",
+   "metadata": {},
+   "source": [
+    "### Label the clients by their characteristics. "
    ]
   },
   {
@@ -1870,17 +1910,6 @@
     "#export df2 to csv \n",
     "# this file contains the final clients we are offering loans to\n",
     "df2.to_csv(\"Competition data 2.csv\", index=False)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "9e6eed52",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# reload \"Competition data 2.csv\" as a new dataframe\n",
-    "\n"
    ]
   }
  ],
